--- a/environment.yml
+++ b/environment.yml
@@ -4,48 +4,48 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2020.1.1=0
-  - certifi=2019.11.28=py36_0
-  - cycler=0.10.0=py_2
-  - freetype=2.10.0=h563cfd7_1
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=64.2=he025d50_1
-  - intel-openmp=2019.5=281
-  - joblib=0.14.1=py_0
-  - jpeg=9c=hfa6e2cd_1001
-  - kiwisolver=1.1.0=py36he980bc4_0
-  - libclang=9.0.1=default_hf44288c_0
-  - libpng=1.6.37=h7602738_0
-  - matplotlib=3.1.2=py36_1
-  - matplotlib-base=3.1.2=py36h2981e6d_1
-  - mkl=2019.5=281
-  - mkl-service=2.3.0=py36hb782905_0
-  - mkl_fft=1.0.15=py36h14836fe_0
-  - mkl_random=1.1.0=py36h675688f_0
-  - numpy=1.18.1=py36h93ca92e_0
-  - numpy-base=1.18.1=py36hc3f5095_0
-  - openssl=1.1.1=he774522_0
-  - pandas=0.25.3=py36ha925a31_0
-  - pip=19.3.1=py36_0
-  - pyparsing=2.4.6=py_0
-  - pyqt=5.12.3=py36h6538335_1
-  - python=3.6.10=h9f7ef89_0
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - qt=5.12.5=h7ef1ec2_0
-  - scikit-learn=0.22.1=py36h6288b17_0
-  - scipy=1.3.2=py36h29ff71c_0
-  - seaborn=0.10.0=py_0
-  - setuptools=44.0.0=py36_0
-  - six=1.13.0=py36_0
-  - sqlite=3.30.1=he774522_0
-  - tornado=6.0.3=py36hfa6e2cd_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_1
-  - wheel=0.33.6=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
-  - zlib=1.2.11=h2fa13f4_1006
+  - blas=1.0
+  - ca-certificates=2020.1.1
+  - certifi=2019.11.28
+  - cycler=0.10.0
+  - freetype=2.10.0
+  - icc_rt=2019.0.0
+  - icu=64.2
+  - intel-openmp=2019.5
+  - joblib=0.14.1
+  - jpeg=9c
+  - kiwisolver=1.1.0
+  - libclang=9.0.1
+  - libpng=1.6.37
+  - matplotlib=3.1.2
+  - matplotlib-base=3.1.2
+  - mkl=2019.5
+  - mkl-service=2.3.0
+  - mkl_fft=1.0.15
+  - mkl_random=1.1.0
+  - numpy=1.18.1
+  - numpy-base=1.18.1
+  - openssl=1.1.1
+  - pandas=0.25.3
+  - pip=19.3.1
+  - pyparsing=2.4.6
+  - pyqt=5.12.3
+  - python=3.6.10
+  - python-dateutil=2.8.1
+  - pytz=2019.3
+  - qt=5.12.5
+  - scikit-learn=0.22.1
+  - scipy=1.3.2
+  - seaborn=0.10.0
+  - setuptools=44.0.0
+  - six=1.13.0
+  - sqlite=3.30.1
+  - tornado=6.0.3
+  - vc=14.1
+  - vs2015_runtime=14.16.27012
+  - wheel=0.33.6
+  - wincertstore=0.2
+  - zlib=1.2.11
   - pip:
     - pyqt5-sip==4.19.18
     - pyqtwebengine==5.12.1
